# greenburst-sps

./: CMakeLists.txt  LICENSE  README.md
cmake/: DoxyfileAPI.in  FindAstroAccelerate.cmake  FindCheetah.cmake  FindFFTW.cmake  FindPanda.cmake  boost.cmake  compiler_settings.cmake  cuda.cmake  dependencies.cmake  hiredis.cmake  profile_guided_optimization.cmake  subpackage.cmake  tags.cmake  version.h.in
config/: lband-empty-sigproc.xml  lband-sps-sigproc.xml
greenburst/: CMakeLists.txt
greenburst/pipeline/: CMakeLists.txt  EmptyPipeline.h  Factory.h  GreenburstConfiguration.h  GreenburstLauncherTraits.h  ModulesConfig.h  ProcessingPipeline.h  RfimPipeline.h  SinglePulseSearch.h
greenburst/pipeline/detail/: ModulesConfig.cpp
greenburst/pipeline/src/: EmptyPipeline.cpp  Factory.cpp  GreenburstConfiguration.cpp  ProcessingPipeline.cpp  RfimPipeline.cpp  SinglePulseSearch.cpp  launcher_main.cpp
greenburst/pipeline/test/: CMakeLists.txt
greenburst/pipeline/test_utils/: CMakeLists.txt
greenburst/sink/: CMakeLists.txt  Config.h  Factory.h
greenburst/sink/src/: Config.cpp  Factory.cpp
greenburst/sink/test/: CMakeLists.txt
greenburst/sink/test_utils/: CMakeLists.txt
greenburst/source/: CMakeLists.txt  Config.h  Factory.h
greenburst/source/detail/: Factory.cpp
greenburst/source/src/: Config.cpp  Factory.cpp
greenburst/source/test/: CMakeLists.txt
greenburst/source/test_utils/: CMakeLists.txt
greenburst/source/udp/: BeamFormerPacket.h  BeamFormerPacketHeader.h  BeamFormerPacketInspector.h  CMakeLists.txt  Config.h  Sample.h  UdpStream.h
greenburst/source/udp/detail/: BeamFormerDataTraits.cpp  BeamFormerDataTraits.h  UdpStream.cpp
greenburst/source/udp/src/: BeamFormerDataTraits.cpp  BeamFormerPacket.cpp  BeamFormerPacketHeader.cpp  BeamFormerPacketInspector.cpp  Config.cpp  (+2 more)
greenburst/source/udp/test/: BeamFormerPacketInspectorTest.h  BeamFormerPacketTest.h  CMakeLists.txt
greenburst/source/udp/test/src/: BeamFormerPacketInspectorTest.cpp  BeamFormerPacketTest.cpp
greenburst/utils/: CMakeLists.txt  ConfigModule.h
greenburst/utils/src/: ConfigModule.cpp
greenburst/utils/test/: CMakeLists.txt
tools/: class  newpackage
(+1 files in other folders)
